@@ -2,10 +2,21 @@ systemd System and Service Manager
 
 CHANGES WITH 259 in spe:
 
+        Incompatible changes:
+
+        * When the WorkingDirectory= is prefixed with the '-' literal, the
+          implicit dependencies on all mount units required to access the path
+          are not automatically set anymore. This restores the behavior prior
+          to v256.
+
+        Service manager/PID1:
+
         * The cgroup2 file system is now mounted with the
           "memory_hugetlb_accounting" mount option, supported since kernel 6.6.
           This means that HugeTLB memory usage is now counted towards the
           cgroup’s overall memory usage for the memory controller.
+
+        systemd-userdbd & systemd-homed:
 
         * homectl's --recovery-key= option may now be used with the "update"
           command to add recovery keys to existing user accounts. Previously,
